Updating API docs and service keys to allow for multiple resources
