# internal/api/v1/docs/authAPI_docs.go
@@ -14,8 +14,7 @@
 	limitations under the License.
 */
 
-// Package docs GENERATED BY SWAG; DO NOT EDIT
-// This file was generated by swaggo/swag
+// Code generated by swaggo/swag. DO NOT EDIT
 package docs
 
 import "github.com/swaggo/swag"
@@ -706,6 +705,19 @@ const docTemplateauthAPI = `{
         }
     },
     "definitions": {
+        "auth.Kind": {
+            "type": "string",
+            "enum": [
+                "session",
+                "api",
+                "service"
+            ],
+            "x-enum-varnames": [
+                "KindSession",
+                "KindAPIKey",
+                "KindServiceSession"
+            ]
+        },
         "models.ConfigResponse": {
             "type": "object",
             "properties": {
@@ -757,11 +769,11 @@ const docTemplateauthAPI = `{
                 "organization": {
                     "type": "string"
                 },
-                "resource_id": {
-                    "type": "string"
-                },
-                "resource_type": {
-                    "type": "string"
+                "resources": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/servicekey.Resource"
+                    }
                 },
                 "service_key_id": {
                     "type": "string"
@@ -787,12 +799,29 @@ const docTemplateauthAPI = `{
                     "type": "string"
                 },
                 "session": {
-                    "type": "string",
                     "enum": [
                         "session",
                         "api",
                         "service"
+                    ],
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/auth.Kind"
+                        }
                     ]
+                }
+            }
+        },
+        "servicekey.Resource": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "description": "ID is the resource's unique identifier",
+                    "type": "string"
+                },
+                "type": {
+                    "description": "Type is the resource's type",
+                    "type": "string"
                 }
             }
         }
